--- a/ImagePortfolio/index.html
+++ b/ImagePortfolio/index.html
@@ -22,6 +22,7 @@
         <p>Hello! I am a web developer with a passion for creating beautiful and functional websites.</p>
     </section> -->
     <section id="projects">
+        <div class="loader" id="loader"></div>
         <div class="projects-container">
             <div class="project-list">
                 <div class="project">
