changed some issues

--- a/ImagePortfolio/index.html
+++ b/ImagePortfolio/index.html
@@ -23,7 +23,7 @@
     </section> -->
     <section id="projects">
         <div class="loader" id="loader"></div>
-        <div class="projects-container">
+        <div class="projects-container" id="projects-container">
             <div class="project-list">
                 <div class="project">
                     <img src="images/image - 2024-05-03T162349.396.png" alt="Project 1">
